# diy-drone-powered-by-esp32s3

./: .gitignore  CMakeLists.txt  GROUNDSTATION.md  IRAM_SOLUTION.md  LICENSE  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32s3
.github/: copilot-instructions.md
apptest/: ESP32连接指南.md  FILES.md  README.md  app.js  motor_test.js  package-lock.json  package.json
apptest/data/: pid_profile.json
apptest/public/: index.html
apptest/src/: DroneClient.js  DroneServer.js  config.js  parser.js  protocol.js
components/drivers/spi_devices/bmi088/: CMakeLists.txt  bmi088.c  bmi088_config.c  bmi088_spi.c
components/drivers/spi_devices/bmi088/include/: bmi088.h  bmi088_config.h  bmi088_spi.h
components/platform/: CMakeLists.txt  platform.c  platform.h  stm32_legacy.h
main/: Kconfig.projbuild  idf_component.yml  main.c
mechanical/: README.md
mechanical/打印/: PPACF测试板.3mf  PPACF测试板.gcode.3mf  Protection_for_2.5_inch_prop.3mf  底板 测试.3mf  底板 测试.stl  新起落架.3mf  机臂.stl  顶板.3mf
mechanical/新版 4.5/: 5045 CW.ipt  MOTOR_1806_2280KV.ipt  PPACF测试板.ipt  Spacer.ipt  darwin_landing_gear_-_Part_4.ipt  side.plate.cam.rev3.ipt  上板.ipt  下板.ipt  中版.ipt  完整体.iam  底板.ipt  新起落架.ipt  机臂.ipt  桨保.ipt  电池.ipt  电池仓.ipt  设计规划.md  起落架一体.ipt  铜柱.ipt  飞控外壳.iam
mechanical/旧完整版/: MOTOR_1806.iam  drone.bottom.plate.revision2.ipt  topplate.rev4.ipt  (+4 more)
software/: README.md
tools/: remote_server_demo.py
文档/: 1.14.md  BMI088驱动开发参考手册.md  M2电机输出问题解决方案.md  mDNS自动发现配置指南.md  保护机制与停机链路对照表.md  卡尔曼估计器详解.md  卡尔曼滤波.md  姿态解算参数调节指南.md  无人机控制流程.md  电机测试系统使用指南.md  程序配置结构.md  系统架构与设计模式汇总.md
(+236 files in other folders)
